# Hlek

./: .gitignore  Pling.hs  README.md  adddrink.hs  bmi.hs  div.hs  ffolds.hs  filer.hs  fmap.hs  ft.hs  hlek.hs  hlek2.hs  hlek3.hs  hlek5.hs  hund.hs  kladd.hs  kladd2.hs  linse.hs  lll.hs  main.hi  main.hs  matrix.hs  monad.hs  ny_random.hs  perm.hs  plump.hs  prime.hs  righttri.hs  roman.hs  shape.hs  telle_ord.hs  thread.hs  vektor.hs  vowel.hs
forkio_test/: forkio_test.hi  forkio_test.hs
gloss_test/: gloss_test.hs
sdl2_test/: .ghc.environment.x86_64-mingw32-8.6.5  sdl2-test.cabal  stack.yaml
sdl2_test/common/: common.cabal
sdl2_test/common/src/: Common.hs
sdl2_test/src/: sdl2_test.hs
