name:                sdl2-test
version:             0.1.0.0
author:              Paul
maintainer:          paul.raestad@gmail.com
cabal-version:       >=1.10
build-type:          Simple


executable sdl2_test
  hs-source-dirs:      src
  main-is:             sdl2_test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -D_SDL_main_h
  build-depends:       base
                     , sdl2
  default-language:    Haskell2010
  